<resources>
    <string name="app_name">NfcTest</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>



    <string name="ble_not_supported">BLE is not supported.</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="about">About BTDemo</string>
    <string name="version">Version</string>
    <string name="unknown_version">Unknown version</string>
    <string name="ok">OK</string>

    <!-- Activity -->
    <string name="apdu_command">APDU command</string>
    <string name="atr">ATR</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_key">Authentication Key</string>
    <string name="battery_service">Battery service</string>
    <string name="battery_level">Battery level: </string>
    <string name="battery_status">Battery status: </string>
    <string name="card_reader_not_ready">Card reader is not ready</string>
    <string name="card_status_2">Card status: </string>
    <string name="clear">Clear</string>
    <string name="connection_status">Connection status: </string>
    <string name="device_info">Device Info</string>
    <string name="escape_command">Escape command</string>
    <string name="fw_revision">FW revision: </string>
    <string name="hw_revision">HW revision: </string>
    <string name="get_battery_level">Get Battery Level</string>
    <string name="get_battery_status">Get Battery Status</string>
    <string name="get_device_info">Get Device Info</string>
    <string name="get_card_status">Get Card Status</string>
    <string name="set_tx_power">Set Tx Power</string>
    <string name="manufacturer">Manufacturer: </string>
    <string name="model_num">Model Num: </string>
    <string name="noData"></string>
    <string name="power_off_card">Power Off Card</string>
    <string name="power_on_card">Power On Card</string>
    <string name="serial_num">Serial Num: </string>
    <string name="card_status">Card Status</string>
    <string name="start_polling">Start Polling</string>
    <string name="status_change_notifications">Status change notifications</string>
    <string name="stop_polling">Stop　Polling</string>
    <string name="system_id">System ID: </string>
    <string name="transmit_apdu">Transmit APDU Command</string>
    <string name="transmit_escape_command">Transmit Escape Command</string>

    <string-array name="tx_power_values">
        <item>-23 dBm</item>
        <item>-6 dBm</item>
        <item>0 dBm</item>
        <item>4 dBm</item>
    </string-array>

    <!-- Connection status -->
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connect_fail">Fail to connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="disconnect_fail">Fail to disconnect</string>

    <!-- Menu items -->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
