<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="500"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView01"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="100"
                android:textColor="#FFFFFF"
                android:text="@string/status_change_notifications"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView02"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="100"
                android:textColor="#FFFFFF"
                android:text="@string/connection_status" />

            <TextView
                android:id="@+id/textView_ReaderState"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:textColor="#FFFFFF"
                android:layout_weight="100" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="30" />

            <TextView
                android:id="@+id/textView03"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="100"
                android:textColor="#FFFFFF"
                android:text="@string/card_status_2" />

            <TextView
                android:id="@+id/textView_IccState"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="100"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="30" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="100"
                android:textColor="#FFFFFF"
                android:text="@string/card_status"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="100"
                android:textColor="#FFFFFF"
                android:text="@string/card_status_2" />

            <TextView
                android:id="@+id/textView_SlotStatus"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="100"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView06"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="80"
                android:textColor="#FFFFFF"
                android:text="@string/authentication_key"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_Master_Key"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="140"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:hint="@string/authentication_key" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView_Authentication"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="70"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="20" />

            <TextView
                android:id="@+id/textView07"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="70"
                android:textColor="#FFFFFF"
                android:text="@string/atr"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_ATR"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="140"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="20" />

            <TextView
                android:id="@+id/textView08"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="80"
                android:textColor="#FFFFFF"
                android:text="@string/apdu_command"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_ADPU"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="140"
                android:ems="10"
                android:hint="@string/apdu_command"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/textView_Response"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="100"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="20" />

            <TextView
                android:id="@+id/textView09"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="70"
                android:textColor="#FFFFFF"
                android:text="@string/escape_command"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_Escape"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="140"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:hint="@string/escape_command" />

            <TextView
                android:id="@+id/textView_EscapeResponse"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="110"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="100"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_Clear"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button_Authenticate"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/authenticate"/>

        <Button
            android:id="@+id/button_StartPolling"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/start_polling" />

        <Button
            android:id="@+id/button_StopPolling"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/stop_polling" />

        <Button
            android:id="@+id/button_PowerOn"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/power_on_card" />

        <Button
            android:id="@+id/button_power_off_card"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/power_off_card" />

        <Button
            android:id="@+id/button_TransmitADPU"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/transmit_apdu" />

        <Button
            android:id="@+id/button_TransmitEscapeCommand"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/transmit_escape_command" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="100"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_GetCardStatus"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="@string/get_card_status" />

        <Button
            android:id="@+id/button_StartAutoDetect"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="Start Auto Detect" />

        <Button
            android:id="@+id/button_StopAutoDetect"
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:text="Stop Auto Detect" />

        <TextView
            android:layout_width="0dip"
            android:layout_weight="100"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#C0C0FF"
            android:text="IDm"
            android:gravity="center_vertical|right"/>

        <View
            android:layout_width="0dip"
            android:layout_weight="10"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/IDm1"
            android:layout_width="0dip"
            android:layout_weight="80"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#FFC0C0"
            android:text="FFFF"
            android:gravity="center"/>

        <View
            android:layout_width="0dip"
            android:layout_weight="10"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/IDm2"
            android:layout_width="0dip"
            android:layout_weight="80"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#FFC0C0"
            android:text="FFFF"
            android:gravity="center"/>

        <View
            android:layout_width="0dip"
            android:layout_weight="10"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/IDm3"
            android:layout_width="0dip"
            android:layout_weight="80"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#FFC0C0"
            android:text="FFFF"
            android:gravity="center"/>

        <View
            android:layout_width="0dip"
            android:layout_weight="10"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/IDm4"
            android:layout_width="0dip"
            android:layout_weight="80"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="#FFC0C0"
            android:text="FFFF"
            android:gravity="center"/>

        <View
            android:layout_width="0dip"
            android:layout_weight="40"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>